# Chemical-engineering-simulator

./: README.md  Test.py  game  game.cpp  initial.cpp  int
ChemicalEngineeringStuff/: CMakeLists.txt
ChemicalEngineeringStuff/core/: CMakeLists.txt
ChemicalEngineeringStuff/core/includes/DEFINITIONS/: def.h
ChemicalEngineeringStuff/core/includes/assimp/: revision.h
ChemicalEngineeringStuff/core/src/: app.cpp  app.h  pch.h  render.cpp  render.h  win.cpp  win.h
ChemicalEngineeringStuff/core/src/shader_language/: test_fs.glsl  test_vs.glsl
ChemicalEngineeringStuff/sandBox/: CMakeLists.txt  sandBox.cpp
gameEngineTutorial/: CMakeLists.txt  readme.MD
gameEngineTutorial/rose/: CMakeLists.txt  engineheaders.h
gameEngineTutorial/rose/main/: application.cpp  application.h  entrypoint.h  log.cpp  log.h  rose_pch.cpp  rose_pch.h  src.h
gameEngineTutorial/rose/main/Events/: applicationEvents.h  events.h  keyEvents.h  mouseEvents.h
gameEngineTutorial/sandBox/: CMakeLists.txt
gameEngineTutorial/sandBox/main/: main.cpp
light in opengl/: CMakeLists.txt  readme.md
light in opengl/assets/icons/: resources.rc
light in opengl/assets/shaders/: fsc.glsl  fsp.glsl  vsc.glsl  vsp.glsl
light in opengl/include/assimp/: defs.h  material.h  revision.h
light in opengl/include/glad/: glad.h
light in opengl/include/mine/: camera.h  mesh.h  mine.h  render.h  shader.h  src.h  window.h
light in opengl/include/mine/events/: events.cpp  events.h
light in opengl/src/: glad.c  main.cpp
light in opengl/src/mine/: camera.cpp  cube.cpp  mesh.cpp  mine.cpp  render.cpp  shader.cpp  window.cpp
lightIng/: CMakeLists.txt
lightIng/assets/shaders/: fragment_shadere_cube.glsl  vertex_shader_cube.glsl
lightIng/assets/textures/: Animations.gltf
lightIng/assets/verts/: cube_vertices.txt
lightIng/src/: f_file_cube.glsl  f_file_py.glsl  main.cpp  v_file_cube.glsl  v_file_py.glsl
new/ChemicalEngineeringStuff/: CMakeLists.txt
new/ChemicalEngineeringStuff/Assets/model/: HOUSE.gltf  abcd.gltf  untitled.fbx
new/ChemicalEngineeringStuff/Assets/shader_language/: test_fs.glsl  test_vs.glsl
new/ChemicalEngineeringStuff/core/: CMakeLists.txt
new/ChemicalEngineeringStuff/core/Libs/pkgconfig/: assimp.pc
new/ChemicalEngineeringStuff/core/includes/DEFINITIONS/: def.h
new/ChemicalEngineeringStuff/core/src/: app.cpp  app.h  camera.cpp  camera.h  key.cpp  key.h  pch.h  render.cpp  render.h  win.cpp  win.h
new/ChemicalEngineeringStuff/core/src/shader_language/: test_fs.glsl  test_vs.glsl
new/ChemicalEngineeringStuff/sandBox/: CMakeLists.txt  sandBox.cpp
opengl/: CMakeLists.txt
opengl/src/: fsc.glsl  fst.glsl  main.cpp  vsc.glsl  vst.glsl
openglTeach/: CMakeLists.txt
openglTeach/src/: main.cpp
spdlog/: CMakeLists.txt
